--- a/og-image.html
+++ b/og-image.html
@@ -45,6 +45,6 @@
     </style>
 </head>
 <body>
-    <div>user:jakegut<span>:~${title}$</span>_</div>
+    <div>user@jakegut<span>:~${title}$</span>_</div>
 </body>
 </html>
